# CasperAuto

./: .gitignore  README.md  requirements.txt  setup_workspace.sh
src/common/amathutils_lib/: CMakeLists.txt  package.xml
src/common/amathutils_lib/include/amathutils_lib/: amathutils.hpp  butterworth_filter.hpp  kalman_filter.hpp  time_delay_kalman_filter.hpp
src/common/amathutils_lib/src/: Amathutils.cpp  README.md  butterworth_filter.cpp  kalman_filter.cpp  time_delay_kalman_filter.cpp
src/common/amathutils_lib/test/: test_butterworth_filter.test
src/common/amathutils_lib/test/src/: test_amathutils_lib.cpp  test_butterworth_filter.cpp  test_kalman_filter.cpp
src/common/autoware_health_checker/: CMakeLists.txt  package.xml
src/common/autoware_health_checker/config/: README.md
src/common/autoware_health_checker/include/autoware_health_checker/: constants.h
src/common/autoware_health_checker/launch/: health_analyzer.launch  health_checker.launch
src/common/autoware_health_checker/src/health_aggregator/: health_aggregator.cpp  health_aggregator_node.cpp  status_monitor.cpp
src/common/autoware_health_checker/src/health_analyzer/: health_analyzer.cpp  health_analyzer_node.cpp
src/common/autoware_health_checker/src/health_checker/: diag_buffer.cpp  health_checker.cpp  param_manager.cpp  rate_checker.cpp  value_manager.cpp
src/common/autoware_health_checker/src/system_status_subscriber/: system_status_subscriber.cpp
src/common/autoware_health_checker/test/src/: test_autoware_health_checker.cpp
src/common/libvectormap/: CMakeLists.txt  package.xml
src/common/libwaypoint_follower/: CMakeLists.txt  package.xml
src/common/libwaypoint_follower/include/libwaypoint_follower/: libwaypoint_follower.h  pure_pursuit.h
src/common/libwaypoint_follower/src/: libwaypoint_follower.cpp
src/common/ros_observer/: CMakeLists.txt  package.xml
src/common/ros_observer/include/ros_observer/: lib_ros_observer.h  ros_observer.h
src/common/ros_observer/launch/: ros_observer.launch  test.launch
src/common/ros_observer/lib/: lib_ros_observer.cpp
src/common/ros_observer/src/: ros_observer.cpp
src/common/ros_observer/test/: test_ros_observer.test
src/common/ros_observer/test/src/: test_ros_observer.cpp
src/common/vector_map/: CMakeLists.txt  package.xml
src/common/vector_map/include/vector_map/: vector_map.h
src/common/vector_map/lib/vector_map/: vector_map.cpp
src/common/vector_map_server/: CMakeLists.txt
src/control/libwaypoint_follower/: CMakeLists.txt
src/control/libwaypoint_follower/include/libwaypoint_follower/: test_libwaypoint_follower.h
src/control/libwaypoint_follower/src/: pure_pursuit.cpp
src/control/libwaypoint_follower/test/: test_libwaypoint_follower.test  test_pure_pursuit.test
src/control/libwaypoint_follower/test/src/: test_libwaypoint_follower.cpp  test_pure_pursuit.cpp
src/control/motion_controller/: CMakeLists.txt  package.xml
src/control/motion_controller/include/: motion_controller.h
src/control/motion_controller/src/: motion_controller.cpp  motion_controller_node.cpp
src/control/naive_motion_controller/: CMakeLists.txt  CPPLINT.cfg  README.md
src/control/naive_motion_controller/cmake/: cpplint.cmake
src/control/naive_motion_controller/include/: motion_controller.h
src/control/naive_motion_controller/launch/: motion_controller.launch  motion_controller_delayed.launch
src/control/naive_motion_controller/src/: motion_controller.cpp  motion_controller_node.cpp
src/control/trajectory_controller/: CMakeLists.txt  README.md  package.xml
src/control/trajectory_controller/include/: trajectory_controller.h
src/control/trajectory_controller/launch/: trajectory_controller.launch  trajectory_controller_delayed.launch
src/control/trajectory_controller/src/: trajectory_controller.cpp  trajectory_controller_node.cpp
src/hdmap/map_file/: CMakeLists.txt  README.md  package.xml
src/hdmap/map_file/include/map_file/: get_file.h
src/hdmap/map_file/launch/: lanelet2_map_loader.launch  points_map_loader.launch  vector_map_loader.launch
src/hdmap/map_file/lib/map_file/: get_file.cpp
src/hdmap/map_file/nodes/lanelet2_map_loader/: lanelet2_map_loader.cpp  lanelet2_map_visualization.cpp
src/hdmap/map_file/nodes/points_map_loader/: points_map_loader.cpp
src/hdmap/object_map/: CMakeLists.txt  package.xml
src/hdmap/object_map/launch/: laserscan2costmap.launch  potential_field.launch  wayarea2grid.launch  wayarea2grid_lanelet2.launch  wayarea2grid_option.launch
src/hdmap/odr_map/: .gitignore  CMakeLists.txt  README.md  package.xml  plugin_description.xml
src/hdmap/odr_map/include/: PathListParser.h  odr_map.h
src/hdmap/odr_map/launch/: odr_map_server.launch
src/hdmap/odr_map/src/: PathListParser.cpp  odr_map.cpp  odr_map_server.cpp
src/hdmap/odr_map/srv/: GenerateWaypoints.srv  GetMapGeoLocation.srv  GetMapObject.srv  GetMapPolygons.srv
src/hdmap/odr_map_loader/: CMakeLists.txt  README.md  package.xml
src/hdmap/odr_map_loader/launch/: odr_map_loader.launch  odr_map_loader_test.launch  odr_map_path_finder.launch  traffic_info_loader.launch
src/hdmap/odr_map_loader/rviz/: demo.rviz
src/hdmap/odr_map_loader/src/: odr_map_loader.cpp  odr_map_path_finder.cpp  traffic_info_loader.cpp
src/hdmap/vector_map_server/: package.xml
src/localization/ekf_localizer/: CMakeLists.txt  package.xml  setup.py
src/localization/ekf_localizer/launch/: ekf_localizer.launch
src/localization/ekf_localizer/src/: es_ekf.py  main.py
src/localization/gnss_imu_localizer/: CMakeLists.txt  package.xml  setup.py
src/localization/gnss_imu_localizer/src/: gnss_imu_localizer.py
src/message/autoware_msgs/: CMakeLists.txt  package.xml
src/message/autoware_msgs/msg/: Gear.msg  VehicleCmd.msg  VehicleStatus.msg  Waypoint.msg
src/message/autoware_msgs/srv/: RecognizeLightState.srv
src/message/autoware_system_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/message/autoware_system_msgs/msg/: DiagnosticStatus.msg
src/message/casper_auto_msgs/: CMakeLists.txt  package.xml
src/message/casper_auto_msgs/msg/general/: Gap.msg  (+17 more)
(+808 files in other folders)
