<?xml version="1.0"?>
<package format="2">
  <name>libvectormap</name>
  <version>1.12.0</version>
  <description>Common Library to Read Vector Map</description>
  <maintainer email="sujiwo@ertl.jp">sujiwo</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>eigen</depend>
  <depend>roslint</depend>
  <depend>vector_map</depend>
  <depend>vector_map_msgs</depend>
</package>
