<?xml version="1.0"?>
<package format="2">
  <name>libwaypoint_follower</name>
  <version>1.12.0</version>
  <description>The libwaypoint_follower package</description>
  <maintainer email="h_ohta@ertl.jp">h_ohta</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>rostest</test_depend>

  <depend>amathutils_lib</depend>
  <depend>autoware_msgs</depend>
  <depend>casper_auto_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>rosunit</depend>
  <depend>std_msgs</depend>
  <depend>eigen</depend>
</package>
