<?xml version="1.0"?>
<package format="2">
  <name>ros_observer</name>
  <version>1.12.0</version>
  <description>The ros_observer package</description>
  <author email="shingo.takeuchi.2@tier4.jp">Shingo Takeuchi</author>
  <maintainer email="shingo.takeuchi.2@tier4.jp">Shingo Takeuchi</maintainer>
  <license>Apache 2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rostest</build_depend>
  <depend>roscpp</depend>
  <depend>boost</depend>
  <depend>roslint</depend>
  <export>
  </export>
</package>
