<?xml version="1.0"?>
<package format="2">
  <name>vector_map_server</name>
  <version>1.12.0</version>
  <description>The vector_map_server package</description>
  <maintainer email="syouji@axe.bz">syouji</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>autoware_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roslint</depend>
  <depend>vector_map</depend>
  <depend>vector_map_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
