<?xml version="1.0"?>
<package format="2">
  <name>ekf_localizer</name>
  <version>0.0.1</version>
  <description>The ekf_localizer package</description>
  <maintainer email="robotpengxu@gmail.com">Team Casper Auto</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
