<?xml version="1.0"?>
<package format="2">
  <name>autoware_system_msgs</name>
  <version>1.14.0</version>
  <description>The autoware_system_msgs package</description>
  <maintainer email="masaya.kataoka@tier4.jp">Masaya Kataoka</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>
  <depend>rosgraph_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
